--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
   },
   "homepage": "https://github.com/TKlintworth/temporiabot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0"
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "discord.js": "^14.11.0",
+    "express": "^4.18.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
+    "qrcode": "^1.5.3",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "eslint": "^8.45.0"
