s3 image upload and mongo card addition

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/TKlintworth/temporiabot#readme",
   "dependencies": {
+    "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "discord.js": "^14.11.0",
