--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/TKlintworth/temporiabot#readme",
   "dependencies": {
+    "archiver": "^5.3.1",
     "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsqr": "^1.4.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
