--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/TKlintworth/temporiabot#readme",
   "dependencies": {
+    "@stevebel/png": "^1.5.1",
     "archiver": "^5.3.1",
     "aws-sdk": "^2.1430.0",
     "axios": "^1.4.0",
