--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jimp": "^0.22.10",
     "jsqr": "^1.4.0",
+    "jsqr-es6": "^1.4.0-1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "qrcode": "^1.5.3",
+    "qrcode-reader": "^1.0.4",
     "sharp": "^0.32.4"
   },
   "devDependencies": {
